# voxlink

./: .gitignore  app.js  index.html  island.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: add_frameworks.py  sign-macos.sh  sign-windows.ps1
src/: App.tsx  IslandApp.tsx  index.css  island.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  entitlements.plist  tauri.conf.json  voxlink.manifest
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/ios/: ExportOptions.plist
src-tauri/src/: audio.rs  caret.rs  injector.rs  lib.rs  main.rs
src/components/: FloatingBar.tsx
src/types/: speech-recognition.d.ts
website/: index.html
