[package]
name = "voxlink"
version = "1.0.0"
description = "高精度跨平台语音输入助手"
authors = ["VoxLink Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "voxlink_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
ringbuf = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
parking_lot = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.23"
core-foundation-sys = "0.8"
cocoa = "0.26"
objc = "0.2"
objc-foundation = "0.1"
block = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Ole",
    "Win32_System_DataExchange",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]